--- a/main.css
+++ b/main.css
@@ -3,12 +3,15 @@ html {
 }
 
 .pseudo-nav {
-  margin: 2em 0em 4em 0em;
+  margin: 2em 0em 5em 0em;
   color: black;
 }
 
 .nav-options {
-  color: gray;
+  letter-spacing: 0.1rem;
+  font-size: 13px;
+  font-weight: 800;
+  color: #303030;
 }
 
 .side-card {
@@ -21,5 +24,14 @@ html {
   padding: 30px 30px 30px 30px;
 }
 
-.main-content {
+
+.icon-panel img {
+  float: left;
+  height: 24px;
+  width: 24px;
+  margin: 0px 10px 0px 0px;
+}
+
+.icon-panel a {
+  color: black;
 }
