--- a/styles/main.css
+++ b/styles/main.css
@@ -46,20 +46,36 @@ html {
   margin-top: 100px;
   margin-bottom: 0px;
 
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Playfair Display', sans-serif;
+  letter-spacing: 2px;
+  font-weight: 700;
+}
+
+
+.right-container > h1 > span {
+  margin-left: 20px;
+  font-size: 50px;
+}
+
+.right-container > h3 {
+  font-family: 'Open Sans Condensed', sans-serif;
+
+  letter-spacing: 0px;
+
+  font-size: 32px;
   font-weight: 600;
 }
-.right-container > h1 > span {
-  color: blue;
+
+.right-container > h3 > a {
 }
 
 .right-container > p {
 
-  font-family: 'Quattrocento', serif;
+  font-family: 'Playfair Display', serif;
 
-  font-size: 16px;
+  font-size: 20px;
   letter-spacing: 0px;
-  font-weight: 700;
+  font-weight: 500;
 
   margin-bottom: 40px;
 }
@@ -70,4 +86,8 @@ html {
   font-weight: 600;
 
   margin-bottom: 8px;
+}
+
+.account-links {
+
 }
