--- a/styles/main.css
+++ b/styles/main.css
@@ -13,18 +13,18 @@ html {
 .header-row h1 {
 
   display: inline-block;
-  margin-right: 70px;
+  margin-right: 90px;
   padding: 8px 20px 8px 20px;
 
   border-radius:50px;
   background-color: red;
   color: white;
 
-  font-family: 'Montserrat', sans-serif;
-  font-size: 14px;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 18px;
   text-transform: uppercase;
-  font-weight: 600;
-  letter-spacing: 0px;
+  font-weight: 700;
+  letter-spacing: 1px;
 }
 .flexbox {
   display: flex;
@@ -32,25 +32,24 @@ html {
 
 
 .left-container {
-  width: 60%;
+  width: 55%;
 
 }
 
 .right-container {
-  width: 40%;
+  width: 45%;
 
   padding-right: 80px;
 }
 
-.right-container > h1 {
-  margin-top: 100px;
+.right-container > h1{
+  margin-top: 70px;
   margin-bottom: 0px;
 
   font-family: 'Playfair Display', sans-serif;
   letter-spacing: 2px;
   font-weight: 700;
 }
-
 
 .right-container > h1 > span {
   margin-left: 20px;
@@ -70,10 +69,9 @@ html {
 }
 
 .right-container > p {
-
   font-family: 'Playfair Display', serif;
 
-  font-size: 20px;
+  font-size: 18px;
   letter-spacing: 0px;
   font-weight: 500;
 
@@ -88,6 +86,33 @@ html {
   margin-bottom: 8px;
 }
 
-.account-links {
+.account-links > li:nth-child(1)::before {
+  color: white;
+}
+.account-links > li:nth-child(2)::before {
+  color: white;
+}
+.account-links > li:nth-child(3)::before {
+  color: white;
+}
 
+.card {
+  width: 200px;
+  height: 200px;
+
+  overflow: hidden;
+  display: inline-block;
+  border-radius: 0;
+
+  margin-right: 60px
+}
+
+.card > img {
+  width: 100%;
+  height: 100%;
+  object-fit: scale-down;
+}
+
+.color-secondary {
+  color: white;
 }
