--- a/styles/main.css
+++ b/styles/main.css
@@ -1,118 +1,55 @@
-html {
-  width: 100%;
-  height: 100%;
-  font-size: 16px;
+/*
+Error: Invalid CSS after "100%": expected expression (e.g. 1px, bold), was ";"
+        on line 2 of main.css
 
-  padding: 20px;
-}
+1: html {
+2:   width: 100%;
+3:   height: 100%;
+4:   font-size: 16px;
+5: 
+6:   padding: 0px 20px 20px 0px;
+7: }
 
-.header-row {
-  padding-left: 40%;
-}
-
-.header-row h1 {
-
-  display: inline-block;
-  margin-right: 90px;
-  padding: 8px 20px 8px 20px;
-
-  border-radius:50px;
-  background-color: red;
-  color: white;
-
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 18px;
-  text-transform: uppercase;
-  font-weight: 700;
-  letter-spacing: 1px;
-}
-.flexbox {
-  display: flex;
-}
-
-
-.left-container {
-  width: 55%;
-
-}
-
-.right-container {
-  width: 45%;
-
-  padding-right: 80px;
-}
-
-.right-container > h1{
-  margin-top: 70px;
-  margin-bottom: 0px;
-
-  font-family: 'Playfair Display', sans-serif;
-  letter-spacing: 2px;
-  font-weight: 700;
-}
-
-.right-container > h1 > span {
-  margin-left: 20px;
-  font-size: 50px;
-}
-
-.right-container > h3 {
-  font-family: 'Open Sans Condensed', sans-serif;
-
-  letter-spacing: 0px;
-
-  font-size: 32px;
-  font-weight: 600;
-}
-
-.right-container > h3 > a {
-}
-
-.right-container > p {
-  font-family: 'Playfair Display', serif;
-
-  font-size: 18px;
-  letter-spacing: 0px;
-  font-weight: 500;
-
-  margin-bottom: 40px;
-}
-
-.right-container > ul > li {
-  font-family: 'Montserrat', sans-serif;
-  text-transform: uppercase;
-  font-weight: 600;
-
-  margin-bottom: 8px;
-}
-
-.account-links > li:nth-child(1)::before {
-  color: white;
-}
-.account-links > li:nth-child(2)::before {
-  color: white;
-}
-.account-links > li:nth-child(3)::before {
-  color: white;
-}
-
-.card {
-  width: 200px;
-  height: 200px;
-
-  overflow: hidden;
-  display: inline-block;
-  border-radius: 0;
-
-  margin-right: 60px;
-}
-
-.card > img {
-  width: 100%;
-  height: 100%;
-  object-fit: scale-down;
-}
-
-.color-secondary {
-  color: white;
-}
+Backtrace:
+main.css:2
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/scss/parser.rb:1278:in `expected'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/script/lexer.rb:231:in `expected!'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/script/parser.rb:762:in `assert_done'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/script/parser.rb:69:in `parse'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/script/parser.rb:228:in `parse'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/script.rb:27:in `parse'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:1177:in `parse_script'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:749:in `parse_property'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:708:in `parse_property_or_rule'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:667:in `parse_line'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:540:in `build_tree'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:559:in `block in append_children'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:558:in `each'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:558:in `append_children'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:549:in `block in build_tree'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:542:in `each'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:542:in `build_tree'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:559:in `block in append_children'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:558:in `each'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:558:in `append_children'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:417:in `_to_tree'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:389:in `_render_with_sourcemap'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/engine.rb:307:in `render_with_sourcemap'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/plugin/compiler.rb:462:in `update_stylesheet'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/plugin/compiler.rb:209:in `each'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/plugin/compiler.rb:294:in `watch'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/plugin.rb:109:in `method_missing'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/exec/sass_scss.rb:360:in `watch_or_update'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/exec/sass_scss.rb:51:in `process_result'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/exec/base.rb:52:in `parse'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/lib/sass/exec/base.rb:19:in `parse!'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.5.5/bin/sass:13:in `<top (required)>'
+C:/Ruby24-x64/bin/sass:23:in `load'
+C:/Ruby24-x64/bin/sass:23:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Invalid CSS after \"100%\": expected expression (e.g. 1px, bold), was \";\"\A         on line 2 of main.css\A \A 1: html {\A 2:   width: 100%;\A 3:   height: 100%;\A 4:   font-size: 16px;\A 5: \A 6:   padding: 0px 20px 20px 0px;\A 7: }"; }
