--- a/styles/main.scss
+++ b/styles/main.scss
@@ -19,11 +19,63 @@ body {
 .left-container {
   width: 50%;
   text-align: right;
+
+  padding-top: 40px;
+
+  /* left image*/
+  & > img{
+    height: 68%;
+    width: auto;
+
+    margin-right: 20%;
+    transform: rotate(5deg);
+  }
 }
 
 .right-container {
   width: 50%;
   padding-right: 80px;
+  padding-top: 60px;
+
+  & > h1 > span {
+    margin-left: 20px;
+    font-size: 50px;
+  }
+
+  & > h3 {
+    margin: 20px 0px 0px 0px;
+    padding: 0;
+
+    font-family: 'Open Sans Condensed', sans-serif;
+
+    letter-spacing: 0px;
+
+    font-size: 32px;
+    font-weight: 600;
+  }
+
+  & > h3 > a {
+  }
+
+  & > p {
+    font-family: 'Playfair Display', serif;
+
+    font-size: 18px;
+    letter-spacing: 0px;
+    font-weight: 500;
+
+    margin-bottom: 40px;
+  }
+
+  & > ul > li {
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    font-weight: 600;
+
+    margin-bottom: 8px;
+  }
+
+
 }
 
 .header-row {
@@ -50,13 +102,7 @@ body {
   text-decoration: none;
 }
 
-.left-container > img{
-  height: 68%;
-  width: auto;
 
-  margin-right: 20%;
-  transform: rotate(5deg);
-}
 
 .right-container > h1{
   margin: 50px 0 0 0;
@@ -67,43 +113,7 @@ body {
   font-weight: 700;
 }
 
-.right-container > h1 > span {
-  margin-left: 20px;
-  font-size: 50px;
-}
 
-.right-container > h3 {
-  margin: 20px 0px 0px 0px;
-  padding: 0;
-
-  font-family: 'Open Sans Condensed', sans-serif;
-
-  letter-spacing: 0px;
-
-  font-size: 32px;
-  font-weight: 600;
-}
-
-.right-container > h3 > a {
-}
-
-.right-container > p {
-  font-family: 'Playfair Display', serif;
-
-  font-size: 18px;
-  letter-spacing: 0px;
-  font-weight: 500;
-
-  margin-bottom: 40px;
-}
-
-.right-container > ul > li {
-  font-family: 'Montserrat', sans-serif;
-  text-transform: uppercase;
-  font-weight: 600;
-
-  margin-bottom: 8px;
-}
 
 .account-links > li:nth-child(1)::before {
   color: white;
