--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,15 @@
 html {
   width: 100%;
   height: 100%;
-  font-size: 16px;
-  padding: 0px 20px 20px 0px; }
-
-body {
-  width: 100%;
-  height: 100%; }
+  font-size: 16px; }
+  html body {
+    margin: inherit;
+    padding: inherit; }
 
 .row {
-  width: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
   display: flex; }
 
 .left-container {
@@ -18,14 +18,13 @@ body {
   padding-top: 40px;
   /* left image*/ }
   .left-container > img {
-    height: 68%;
+    height: 90%;
     width: auto;
     margin-right: 20%;
     transform: rotate(5deg); }
 
 .right-container {
   width: 50%;
-  padding-right: 80px;
   padding-top: 60px; }
   .right-container > h1 > span {
     margin-left: 20px;
@@ -37,7 +36,10 @@ body {
     letter-spacing: 0px;
     font-size: 32px;
     font-weight: 600; }
+    .right-container > h3 > a {
+      color: red; }
   .right-container > p {
+    width: 70%;
     font-family: 'Playfair Display', serif;
     font-size: 18px;
     letter-spacing: 0px;
