--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,16 +3,16 @@ html {
   height: 100%;
   font-size: 16px;
 
-  padding: 0px 20px 20px 0px;
-}
-
-body {
-  width: 100%;
-  height: 100%;
+  body {
+    margin: inherit;
+    padding: inherit;
+  }
 }
 
 .row {
-  width: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
   display: flex;
 }
 
@@ -24,7 +24,7 @@ body {
 
   /* left image*/
   & > img{
-    height: 68%;
+    height: 90%;
     width: auto;
 
     margin-right: 20%;
@@ -34,7 +34,6 @@ body {
 
 .right-container {
   width: 50%;
-  padding-right: 80px;
   padding-top: 60px;
 
   & > h1 > span {
@@ -52,12 +51,14 @@ body {
 
     font-size: 32px;
     font-weight: 600;
-  }
 
-  & > h3 > a {
+    & > a {
+      color: red;
+    }
   }
 
   & > p {
+    width: 70%;
     font-family: 'Playfair Display', serif;
 
     font-size: 18px;
