--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,10 @@
 html {
   width: 100%;
   height: 100%;
-  font-size: 16px; }
+  font-size: 10px; }
+  @media only screen and (max-width: 1063px) {
+    html {
+      font-size: 20px; } }
   html body {
     margin: inherit;
     padding: inherit; }
@@ -17,31 +20,52 @@ html {
   text-align: right;
   padding-top: 40px;
   /* left image*/ }
+  @media only screen and (max-width: 1063px) {
+    .left-container {
+      width: 0; } }
   .left-container > img {
     height: 90%;
     width: auto;
     margin-right: 20%;
     transform: rotate(5deg); }
+    @media only screen and (max-width: 1063px) {
+      .left-container > img {
+        width: 0; } }
 
 .right-container {
   width: 50%;
-  padding-top: 60px; }
-  .right-container > h1 > span {
-    margin-left: 20px;
-    font-size: 50px; }
+  padding-top: 60px;
+  font-size: 1em;
+  /* for mobile screens */ }
+  @media only screen and (max-width: 1063px) {
+    .right-container {
+      width: 100%;
+      padding-left: 10%; } }
+  .right-container > h1 {
+    margin: 50px 0 0 0;
+    font-family: 'Playfair Display', sans-serif;
+    font-size: 7em;
+    letter-spacing: 2px;
+    font-weight: 700; }
+    .right-container > h1 > span {
+      margin-left: 20px;
+      font-size: 20px; }
+      @media only screen and (max-width: 1063px) {
+        .right-container > h1 > span {
+          display: none; } }
   .right-container > h3 {
     margin: 20px 0px 0px 0px;
     padding: 0;
     font-family: 'Open Sans Condensed', sans-serif;
     letter-spacing: 0px;
-    font-size: 32px;
+    font-size: 3.2em;
     font-weight: 600; }
     .right-container > h3 > a {
       color: red; }
   .right-container > p {
-    width: 70%;
+    width: 75%;
     font-family: 'Playfair Display', serif;
-    font-size: 18px;
+    font-size: 1.8em;
     letter-spacing: 0px;
     font-weight: 500;
     margin-bottom: 40px; }
@@ -52,30 +76,27 @@ html {
     margin-bottom: 8px; }
 
 .header-row {
-  text-align: left; }
-
-.header-row h1 {
-  display: inline-block;
-  margin-right: 40px;
-  padding: 8px 20px 8px 20px;
-  border-radius: 50px;
-  background-color: red;
-  color: white;
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 18px;
-  text-transform: uppercase;
-  font-weight: 700;
-  letter-spacing: 1px; }
-
-.header-row h1 > a {
-  text-decoration: none; }
-
-.right-container > h1 {
-  margin: 50px 0 0 0;
-  font-family: 'Playfair Display', sans-serif;
-  font-size: 70px;
-  letter-spacing: 2px;
-  font-weight: 700; }
+  text-align: left;
+  font-size: 1em; }
+  .header-row h1 {
+    display: inline-block;
+    margin-right: 4em;
+    padding: 8px 20px 8px 20px;
+    border-radius: 50px;
+    background-color: red;
+    color: white;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 1.8em;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 1px; }
+    @media only screen and (max-width: 1063px) {
+      .header-row h1 {
+        font-size: 2em;
+        margin-right: 2.5em;
+        padding: 0.2em 0.7em 0.2em 0.7em; } }
+    .header-row h1 > a {
+      text-decoration: none; }
 
 .account-links > li:nth-child(1)::before {
   color: white; }
