--- a/styles/main.css
+++ b/styles/main.css
@@ -1,142 +1,51 @@
+/*
+  solarized colors from https://ethanschoonover.com/solarized/  
+  $base03:    #002b36;
+  $base02:    #073642;
+  $base01:    #586e75;
+  $base00:    #657b83;
+  $base0:     #839496;
+  $base1:     #93a1a1;
+  $base2:     #eee8d5;
+  $base3:     #fdf6e3;
+  $yellow:    #b58900;
+  $orange:    #cb4b16;
+  $red:       #dc322f;
+  $magenta:   #d33682;
+  $violet:    #6c71c4;
+  $blue:      #268bd2;
+  $cyan:      #2aa198;
+  $green:     #859900;
+*/
+
 html {
-  width: 100%;
-  height: 100%;
-  font-size: 10px; }
-  @media only screen and (max-width: 1063px) {
-    html {
-      font-size: 20px; } }
-  html body {
-    margin: inherit;
-    padding: inherit; }
+  background-color: #073642;
+  font-family: 'Inconsolata', monospace;
+  font-size: 18px;
+}
 
-.row {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  display: flex; }
+h1 {
+  font-size: 30px;
+  color: #cb4b16;
+}
 
-.left-container {
-  width: 50%;
-  text-align: right;
-  padding-top: 40px;
-  /* left image*/ }
-  @media only screen and (max-width: 1063px) {
-    .left-container {
-      width: 0; } }
-  .left-container > img {
-    height: 90%;
-    width: auto;
-    margin-right: 20%;
-    transform: rotate(5deg); }
-    @media only screen and (max-width: 1063px) {
-      .left-container > img {
-        width: 0; } }
+a {
+  color: #859900;
+}
 
-.right-container {
-  width: 50%;
-  padding-top: 60px;
-  font-size: 1em;
-  /* for mobile screens */ }
-  @media only screen and (max-width: 1063px) {
-    .right-container {
-      width: 100%;
-      padding-left: 10%; } }
-  .right-container > h1 {
-    margin: 50px 0 0 0;
-    font-family: 'Playfair Display', sans-serif;
-    font-size: 7em;
-    letter-spacing: 2px;
-    font-weight: 700; }
-    .right-container > h1 > span {
-      margin-left: 20px;
-      font-size: 50px; }
-      @media only screen and (max-width: 1063px) {
-        .right-container > h1 > span {
-          display: none; } }
-  .right-container > h3 {
-    margin: 20px 0px 0px 0px;
-    padding: 0;
-    font-family: 'Open Sans Condensed', sans-serif;
-    letter-spacing: 0px;
-    font-size: 3.2em;
-    font-weight: 600; }
-    .right-container > h3 > a {
-      color: red; }
-  .right-container > p {
-    width: 75%;
-    font-family: 'Playfair Display', serif;
-    font-size: 1.8em;
-    letter-spacing: 0px;
-    font-weight: 500;
-    margin-bottom: 40px; }
-  .right-container > ul > li {
-    font-family: 'Montserrat', sans-serif;
-    text-transform: uppercase;
-    font-weight: 600;
-    margin-bottom: 8px; }
+#container {
+  width : 50%;
+  margin: 5rem auto auto auto;
+  padding : 1rem 2rem 1rem 2rem;
+  background-color: #002b36;
+  color: #657b83;
+}
 
-.header-row {
-  text-align: left;
-  font-size: 1em; }
-  .header-row h1 {
-    display: inline-block;
-    margin-right: 4em;
-    padding: 8px 20px 8px 20px;
-    border-radius: 50px;
-    background-color: red;
-    color: white;
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 1.8em;
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: 1px; }
-    @media only screen and (max-width: 1063px) {
-      .header-row h1 {
-        font-size: 2em;
-        margin-right: 2.5em;
-        padding: 0.2em 0.7em 0.2em 0.7em; } }
-    .header-row h1 > a {
-      text-decoration: none; }
 
-.account-links > li:nth-child(1)::before {
-  color: white; }
+.underline {
+  text-decoration: underline;
+}
 
-.account-links > li:nth-child(2)::before {
-  color: white; }
-
-.account-links > li:nth-child(3)::before {
-  color: white; }
-
-.card {
-  width: 200px;
-  height: 200px;
-  overflow: hidden;
-  display: inline-block;
-  border-radius: 0;
-  margin-right: 60px; }
-
-.card > img {
-  width: 100%;
-  height: 100%;
-  object-fit: scale-down; }
-
-.color-secondary {
-  color: white; }
-
-.thumbnail {
-  width: 80px;
-  height: 80px;
-  display: inline-block;
-  margin-top: 20px;
-  margin-left: 70px;
-  border-radius: 50%;
-  background-color: #9fce9f;
-  color: black;
-  font-family: 'Playfair Display', serif;
-  text-align: center;
-  font-size: 50px;
-  font-weight: 700;
-  user-select: none;
-  /* Standard */ }
-
-/*# sourceMappingURL=main.css.map */
+.bold {
+  font-weight: bold;
+}
