--- a/styles/main.css
+++ b/styles/main.css
@@ -19,7 +19,7 @@
 */
 
 html {
-  background-color: #073642;
+  background-color: white;
   font-family: 'Inconsolata', monospace;
   font-size: 20px;
 }
@@ -31,12 +31,19 @@ h1 {
   font-weight: normal;
 }
 
+
 #container {
   width : 50%;
-  margin: 5rem auto 5rem auto;
+  margin: 2rem auto 0 auto;
   padding : 1rem 2rem 1rem 2rem;
-  background-color: #002b36;
   color: #657b83;
+}
+
+#profile {
+  display: block;
+  margin: 0 auto 2em auto; 
+  height: 10em;
+  border-radius: 50%;
 }
 
 .emphasis {
