--- a/styles/main.css
+++ b/styles/main.css
@@ -31,9 +31,9 @@ h1 {
 }
 
 #container {
-  width : 50%;
+  width : 40%;
   margin: 2rem auto 0 auto;
-  padding : 1rem 2rem 1rem 2rem;
+  padding-top : 2rem;
   color: #657b83;
 }
 
@@ -96,7 +96,7 @@ h1 {
   flex: 80%;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   html {
     font-size: 1rem;
   }
